# blog

./: README.md
awaitility/: README.md  docker-compose.yml  pom.xml
awaitility/config/: definitions.json
cdc/: .gitignore  README.md  compose.yaml  person-connector.json  pom.xml
cdc/requests/: create.sh  delete-person.http  get-indices.http  get-person-index.http  post-cdc-db-connector.http  post-elastic-sink.http  post-person-connector.http  post-person-search.http  post-person.http  reset.sh
datasource-proxy/datasource-proxy/: pom.xml
embabel/: .gitignore  compose.yaml  pom.xml
embabel/requests/: create-course.http  upload-image.http
enterprise-ai-agents/: .gitignore  README.md
enterprise-ai-agents/dify/: docker-compose.override.yaml  python-requirements.txt
enterprise-ai-agents/prefect/: .dockerignore  .env.example  Dockerfile.bi-agent  Dockerfile.github-agent  docker-compose.yml  prefect.toml  pyproject.toml
enterprise-ai-agents/prefect/agents/bi_agent/: __main__.py  config.py  graph.py  llm.py  memory.py  nodes.py  prompts.py  render.py  schemas.py  tools.py
enterprise-ai-agents/prefect/agents/github_issue_agent/: __main__.py  config.py  graph.py  llm.py  nodes.py  prompts.py  tools.py
enterprise-ai-agents/prefect/flows/: bi_agent_flow.py  github_issue_agent_flow.py
enterprise-ai-agents/shared/: memory_schema.sql  sources_seed.sql
gitea/Sonarqube/custom-profiles/: Sonar_CSS_ims_profile.xml  (+3 more)
gitea/gitea-ansible/: README.md  inventory.ini  playbook.yaml  start.sh
modulith/modulith-observability/: compose.yaml  pom.xml  requests.http
(+85 files in other folders)
