[project]
name = "enterprise-agents"
version = "0.1.0"
description = "LangGraph agents (starting with a daily BI agent) served by Prefect"
requires-python = ">=3.12"
dependencies = [
    "langgraph>=0.2.50",
    "langchain>=1.0.0",
    "langchain-openai>=1.0.0",
    "psycopg[binary]>=3.2.0",
    "reportlab>=4.2.0",
    "prefect>=3.1.0",
    "opik>=1.3.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
bi-agent = "flows.bi_agent_flow:run_once"
bi-agent-serve = "flows.bi_agent_flow:serve"
bi-agent-graph = "agents.bi_agent.graph:render_graph_image"
github-issue-agent = "flows.github_issue_agent_flow:run_once"
github-issue-agent-serve = "flows.github_issue_agent_flow:serve"
github-issue-agent-graph = "agents.github_issue_agent.graph:render_graph_image"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agents", "flows"]
